- switch from using js dom event listeners in the app js to stimulus in dt controller - move conrtoller to wrap in div around table instead of on - use plain js to query actual DOM <table> element, not the stiumas target note: when using the stimulus target it was picking up 3 dt from one acutal table. (dt builds features header, footer, scrools,... ect. and each have their own DOM structure "clones elements" of the og table

--- a/app/views/communities/sections/background/legislative_districts/_senate_district_data.html.haml
+++ b/app/views/communities/sections/background/legislative_districts/_senate_district_data.html.haml
@@ -1,10 +1,11 @@
-%table.table.table-striped.border{ data: { controller: 'datatables' }}
-  %thead
-    %tr
-      %th Senate District
-      %th As of Date
-  %tbody
-    - @community.senate_districts.each do |district|
+%div{ data: { controller: 'datatables' }}
+  %table.table.table-striped.border
+    %thead
       %tr
-        %td= district.district
-        %td= district.as_of_date
+        %th Senate District
+        %th As of Date
+    %tbody
+      - @community.senate_districts.each do |district|
+        %tr
+          %td= district.district
+          %td= district.as_of_date
