--- a/app/views/communities/sections/background/legislative_districts/_house_district_data.html.haml
+++ b/app/views/communities/sections/background/legislative_districts/_house_district_data.html.haml
@@ -1,12 +1,13 @@
-%table.table.table-striped.border{ data: { controller: 'datatables' }}
-  %thead
-    %tr
-      %th District
-      %th Name
-      %th As of Date
-  %tbody
-    - @community.house_districts.each do |district|
+%div{ data: { controller: 'datatables' }}
+  %table.table.table-striped.border
+    %thead
       %tr
-        %td= district.district
-        %td= district.name
-        %td= district.as_of_date
+        %th District
+        %th Name
+        %th As of Date
+    %tbody
+      - @community.house_districts.each do |district|
+        %tr
+          %td= district.district
+          %td= district.name
+          %td= district.as_of_date
