--- a/app/views/datasets/tabs/_data_csv.html.haml
+++ b/app/views/datasets/tabs/_data_csv.html.haml
@@ -1,6 +1,7 @@
-%table.table.table-striped.border{ data: { controller: 'datatables', datatables: { pagesize_value: 25, load_value: metadatum_dataset_path(@metadatum, dataset, format: 'json') } } }
-  %thead
-    %tr
-      - @dataset.data['schema']['fields'].each do |field|
-        %th= field['name']
-  %tbody
+%div{ data: { controller: 'datatables', datatables: { pagesize_value: 25, load_value: metadatum_dataset_path(@metadatum, dataset, format: 'json') } } }
+  %table.table.table-striped.border
+    %thead
+      %tr
+        - @dataset.data['schema']['fields'].each do |field|
+          %th= field['name']
+    %tbody
