Update monthly_generations table/model/associations to display to pull via plants

--- a/app/views/grids/sections/electricity/production/_monthly_chart.html.haml
+++ b/app/views/grids/sections/electricity/production/_monthly_chart.html.haml
@@ -1,4 +1,4 @@
-- chart_title = "#{@grid.name.titleize} Net Generation by Month (#{MonthlyGeneration.latest_year_for(@grid)})"
+- chart_title = "#{@grid.name.titleize} Net Generation by Month"
 = line_chart production_monthly_grid_charts_path(@grid), 
   title: chart_title, 
   xtitle: 'Month', 
