--- a/app/views/communities/sections/electricity/_production.html.haml
+++ b/app/views/communities/sections/electricity/_production.html.haml
@@ -3,7 +3,8 @@
   %h4#production.mb-0.me-3.py-3.anchor-offset Production
   %hr.flex-grow-1.mt-1.mb-0
 .mb-3
-  = render 'communities/shared/grid_info'
+  - if @community.grid
+    = render 'communities/shared/grid_info'
     
   .d-flex.justify-content-between.align-items-center
     .nav.nav-tabs
@@ -30,7 +31,7 @@
   .tab-content.mt-3
     - if @community.show_monthly_generation?
       #monthly-prod-chart-wrapper.tab-pane.fade.show.active
-        = render 'communities/sections/electricity/production/monthly_stats'
+        //= render 'communities/sections/electricity/production/monthly_stats'
         = render "communities/sections/electricity/production/monthly_chart"
 
       #monthly-prod-data.tab-pane.fade
