--- a/app/views/communities/sections/electricity/production/_monthly_data.html.haml
+++ b/app/views/communities/sections/electricity/production/_monthly_data.html.haml
@@ -1,14 +1,16 @@
 %table.table.table-stripped.border{ data: { controller: 'datatables', datatables: { order_value: [3, 'asc']} } }
   %thead
     %tr
+      %th Plant
       %th Net Generation (MWh)
       %th Fuel Type Code
       %th Fuel Type Name
       %th Month
       %th Year
   %tbody
-    - @community.grid.monthly_generations.each do |generation|
+    - @community.monthly_generations.each do |generation|
       %tr
+        %td= generation.plant.name
         %td= generation.net_generation_mwh
         %td= generation.fuel_type_code
         %td= generation.fuel_type_name
