--- a/app/views/grids/sections/electricity/capacity/_capacity_data.html.haml
+++ b/app/views/grids/sections/electricity/capacity/_capacity_data.html.haml
@@ -1,6 +1,7 @@
 %table.table.table-striped.border{ data: { controller: 'datatables', datatables: { order_value: [1, 'desc']} } }
   %thead
     %tr
+      %th Plant
       %th Capacity (MW)
       %th Fuel Type Code
       %th Fuel Type Name
@@ -8,6 +9,7 @@
   %tbody
     - @grid.capacities.each do |capacity|
       %tr
+        %td= capacity.plant.name
         %td= capacity.capacity_mw
         %td= capacity.fuel_type_code
         %td= capacity.fuel_type_name
