Pull out summary logic into seperate controller and controller year with stimulus controller and turboframe

--- a/app/views/communities/sections/electricity/_production.html.haml
+++ b/app/views/communities/sections/electricity/_production.html.haml
@@ -30,7 +30,8 @@
   .tab-content.mt-3
     - if @community.show_monthly_generation?
       #monthly-prod-chart-wrapper.tab-pane.fade.show.active
-        //= render 'communities/sections/electricity/production/monthly_stats'
+
+        = render 'communities/sections/electricity/production/monthly_stats'
         = render "communities/sections/electricity/production/monthly_chart"
 
       #monthly-prod-data.tab-pane.fade
