Adjust ui for summaries

--- a/app/views/communities/sections/electricity/production/_monthly_chart.html.haml
+++ b/app/views/communities/sections/electricity/production/_monthly_chart.html.haml
@@ -1,5 +1,5 @@
 - chart_title = "#{@community.name.titleize} Net Generation by Month"
-= line_chart production_monthly_community_charts_path(@community), 
+= column_chart production_monthly_community_charts_path(@community), 
   title: chart_title, 
   xtitle: 'Month', 
   ytitle: 'Net Generation (MWh)', 
