--- a/app/views/grids/sections/electricity/production/_monthly_chart.html.haml
+++ b/app/views/grids/sections/electricity/production/_monthly_chart.html.haml
@@ -1,5 +1,5 @@
 - chart_title = "#{@grid.name.titleize} Net Generation by Month"
-= line_chart production_monthly_grid_charts_path(@grid), 
+= column_chart production_monthly_grid_charts_path(@grid), 
   title: chart_title, 
   xtitle: 'Month', 
   ytitle: 'Net Generation (MWh)', 
