--- a/app/views/shared/_capacity_summary.html.haml
+++ b/app/views/shared/_capacity_summary.html.haml
@@ -3,18 +3,18 @@
     .d-flex.align-items-center
       %i.bi.bi-bar-chart-line-fill.me-2
       %strong.me-1 Total:
-      %span.text-primary= "#{stats[:total_capacity]} MW"
+      %span.text-primary= "#{number_with_delimiter (stats[:total_capacity])} MW"
 
     .d-flex.align-items-center
       %i.bi.bi-arrow-up-right-circle.me-2
       %strong.me-1 Max:
-      %span.text-success.me-1= "#{stats[:max_capacity]} MW"
+      %span.text-success.me-1= "#{number_with_delimiter (stats[:max_capacity])} MW"
       %small.text-muted= "(#{stats[:max_fuel_type]})"
 
     .d-flex.align-items-center
       %i.bi.bi-arrow-down-right-circle.me-2
       %strong.me-1 Min:
-      %span.text-danger.me-1= "#{stats[:min_capacity]} MW"
+      %span.text-danger.me-1= "#{number_with_delimiter (stats[:min_capacity])} MW"
       %small.text-muted= "(#{stats[:min_fuel_type]})"
 
     .d-flex.align-items-center
