--- a/app/views/shared/_monthly_generation_summary.html.haml
+++ b/app/views/shared/_monthly_generation_summary.html.haml
@@ -3,18 +3,18 @@
     .d-flex.align-items-center
       %i.bi-bullseye.me-2.mt-1
       %strong.me-1 Average:
-      %span.text-primary= "#{stats[:avg_generation]} MWh"
+      %span.text-primary= "#{number_with_delimiter (stats[:avg_generation])} MWh"
 
     .d-flex.align-items-center
       %i.bi-arrow-up-right-circle.me-2.mt-1
       %strong.me-1 Max:
-      %span.text-success.me-1= "#{stats[:max_generation]} MWh"
+      %span.text-success.me-1= "#{number_with_delimiter (stats[:max_generation])} MWh"
       .text-muted= "(#{Date::ABBR_MONTHNAMES[stats[:max_month]]})"
 
     .d-flex.align-items-center
       %i.bi-arrow-down-right-circle.me-2.mt-1
       %strong.me-1 Min:
-      %span.text-danger.me-1= "#{stats[:min_generation]} MWh"
+      %span.text-danger.me-1= "#{number_with_delimiter (stats[:min_generation])} MWh"
       .text-muted= "(#{Date::ABBR_MONTHNAMES[stats[:min_month]]})"
 
     .d-flex.align-items-center
