--- a/app/views/communities/sections/electricity/production/_yearly_chart.html.haml
+++ b/app/views/communities/sections/electricity/production/_yearly_chart.html.haml
@@ -1,5 +1,6 @@
 - base_title = "#{@community.name.titleize} - Net Generation by Fuel Type"
 - chart_options = Chartkick.options.deep_merge({ suffix: ' MWh', donut: true, library: { plugins: { legend: { title: { display: true, text: 'Fuel Type'} } } } })
+- years          = YearlyGeneration.available_years_for(@community)
 
 #yearly-prod-wrapper{
   data: {
@@ -11,13 +12,13 @@
     }
   }
 }
-  - if @community.yearly_generations.available_years.size > 1
+  - if years.size > 1
     .d-flex.align-items-center.gap-2.mb-2
       %label.form-label.me-2.mb-0{ for: "yearly-prod-year" } Year:
       %select#yearly-prod-year.form-select.form-select-sm.w-auto{
         data: { action: "change->fuel-chart#changeYear" }
       }
-        - @community.yearly_generations.available_years.each do |y|
+        - years.each do |y|
           %option{ value: y }= y
 
   #yearly-prod.responsive-fuel-chart{ data: { "fuel-chart-target": "chart" } }
